// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`common:dates range 1`] = `
Array [
  "2019-03-06T00:00:00.000Z",
  "2019-03-07T00:00:00.000Z",
  "2019-03-08T00:00:00.000Z",
  "2019-03-09T00:00:00.000Z",
  "2019-03-10T00:00:00.000Z",
  "2019-03-11T00:00:00.000Z",
  "2019-03-12T00:00:00.000Z",
  "2019-03-13T00:00:00.000Z",
]
`;

exports[`common:dates range 2`] = `
Array [
  "2019-01-11T00:00:00.000Z",
  "2019-01-12T00:00:00.000Z",
  "2019-01-13T00:00:00.000Z",
  "2019-01-14T00:00:00.000Z",
  "2019-01-15T00:00:00.000Z",
  "2019-01-16T00:00:00.000Z",
  "2019-01-17T00:00:00.000Z",
  "2019-01-18T00:00:00.000Z",
  "2019-01-19T00:00:00.000Z",
  "2019-01-20T00:00:00.000Z",
  "2019-01-21T00:00:00.000Z",
  "2019-01-22T00:00:00.000Z",
  "2019-01-23T00:00:00.000Z",
  "2019-01-24T00:00:00.000Z",
  "2019-01-25T00:00:00.000Z",
  "2019-01-26T00:00:00.000Z",
  "2019-01-27T00:00:00.000Z",
  "2019-01-28T00:00:00.000Z",
  "2019-01-29T00:00:00.000Z",
  "2019-01-30T00:00:00.000Z",
  "2019-01-31T00:00:00.000Z",
  "2019-02-01T00:00:00.000Z",
  "2019-02-02T00:00:00.000Z",
  "2019-02-03T00:00:00.000Z",
  "2019-02-04T00:00:00.000Z",
  "2019-02-05T00:00:00.000Z",
  "2019-02-06T00:00:00.000Z",
  "2019-02-07T00:00:00.000Z",
  "2019-02-08T00:00:00.000Z",
  "2019-02-09T00:00:00.000Z",
  "2019-02-10T00:00:00.000Z",
  "2019-02-11T00:00:00.000Z",
  "2019-02-12T00:00:00.000Z",
  "2019-02-13T00:00:00.000Z",
  "2019-02-14T00:00:00.000Z",
  "2019-02-15T00:00:00.000Z",
  "2019-02-16T00:00:00.000Z",
  "2019-02-17T00:00:00.000Z",
  "2019-02-18T00:00:00.000Z",
  "2019-02-19T00:00:00.000Z",
  "2019-02-20T00:00:00.000Z",
  "2019-02-21T00:00:00.000Z",
  "2019-02-22T00:00:00.000Z",
  "2019-02-23T00:00:00.000Z",
  "2019-02-24T00:00:00.000Z",
  "2019-02-25T00:00:00.000Z",
  "2019-02-26T00:00:00.000Z",
  "2019-02-27T00:00:00.000Z",
  "2019-02-28T00:00:00.000Z",
  "2019-03-01T00:00:00.000Z",
  "2019-03-02T00:00:00.000Z",
  "2019-03-03T00:00:00.000Z",
  "2019-03-04T00:00:00.000Z",
  "2019-03-05T00:00:00.000Z",
  "2019-03-06T00:00:00.000Z",
  "2019-03-07T00:00:00.000Z",
  "2019-03-08T00:00:00.000Z",
  "2019-03-09T00:00:00.000Z",
  "2019-03-10T00:00:00.000Z",
  "2019-03-11T00:00:00.000Z",
  "2019-03-12T00:00:00.000Z",
  "2019-03-13T00:00:00.000Z",
]
`;

exports[`common:dates range 3`] = `
Array [
  "2019-01-01T00:00:00.000Z",
  "2019-02-01T00:00:00.000Z",
  "2019-03-01T00:00:00.000Z",
]
`;

exports[`common:dates range 4`] = `
Array [
  "2018-11-01T00:00:00.000Z",
  "2018-12-01T00:00:00.000Z",
  "2019-01-01T00:00:00.000Z",
  "2019-02-01T00:00:00.000Z",
  "2019-03-01T00:00:00.000Z",
]
`;
